# ayabot

./: .gitignore  README.md  pyproject.toml
mybot/: .env.dev  README.md  pyproject.toml
mybot/src/plugins/: test.py
mybot/src/plugins/60s/: __init__.py
mybot/src/plugins/chatgpt/: ChatSession.py  README.MD  __init__.py  config.py
mybot/src/plugins/pic_search/: Ascii2d.py  SauceNao.py  Tracemoe.py  __init__.py  config.py  saucenao_sync.py  saucenao_sync_demo.py
mybot/utils/: CardMessage.py  __init__.py
